src/camera_control.rs

//! MVS SDK 相机控制接口定义
//!
//! 该模块包含了海康威视 MVS SDK 的主要 C API 接口绑定

use crate::{
    MV_CC_DEVICE_INFO, MV_CC_DEVICE_INFO_LIST, MV_FRAME_OUT, MV_FRAME_OUT_INFO_EX, MV_SORT_METHOD,
    MV_XML_InterfaceType,
};
use core::ffi::{c_int, c_short, c_uchar, c_uint, c_void};
use std::ffi::c_char;

/// 无限等待超时时间
pub const MV_INFINITE: u32 = 0xFFFFFFFF;

/// 图像数据回调函数类型
pub type MV_OutputCallback = unsafe extern "C" fn(
    pData: *mut c_uchar,
    pFrameInfo: *mut MV_FRAME_OUT_INFO_EX,
    pUser: *mut c_void,
);

unsafe extern "C" {

    // ========================================================================
    // Part 1: SDK 初始化
    // ========================================================================

    /// 初始化 SDK
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_CC_Initialize() -> c_int;

    /// 反初始化 SDK，释放资源
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// main 函数退出前调用
    pub unsafe fn MV_CC_Finalize() -> c_int;

    /// 获取 SDK 版本号
    ///
    /// # 返回值
    /// 返回 4 字节版本号
    /// |主|次|修正|测试 |
    /// 8bits 8bits 8bits 8bits
    ///
    /// # 示例
    /// 返回值为 0x01000001，即 SDK 版本号为 V1.0.0.1
    pub unsafe fn MV_CC_GetSDKVersion() -> c_uint;

    // ========================================================================
    // Part 2: 相机的控制和取流
    // ========================================================================

    /// 枚举设备
    ///
    /// # 参数
    /// * `nTLayerType` - 枚举传输层，如 MV_GIGE_DEVICE (GigE 设备)
    /// * `pstDevList` - 设备列表（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 设备列表的内存是在 SDK 内部分配的，多线程调用该接口时会进行设备列表内存的释放和申请，
    /// 建议尽量避免多线程枚举操作。
    ///
    /// 枚举传输层适配传入：
    /// - MV_GIGE_DEVICE: 传出所有 GigE 相关的设备信息（包含虚拟 GigE 和 GenTL 下的 GigE 设备）
    /// - MV_USB_DEVICE: 传出所有 USB 设备，包含虚拟 USB 设备
    pub unsafe fn MV_CC_EnumDevices(
        nTLayerType: c_uint,
        pstDevList: *mut MV_CC_DEVICE_INFO_LIST,
    ) -> c_int;

    /// 根据厂商名字枚举设备
    ///
    /// # 参数
    /// * `nTLayerType` - 枚举传输层
    /// * `pstDevList` - 设备列表（输出参数）
    /// * `strManufacturerName` - 厂商名字
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 设备列表的内存是在 SDK 内部分配的，多线程调用该接口时会进行设备列表内存的释放和申请，
    /// 建议尽量避免多线程枚举操作。
    pub unsafe fn MV_CC_EnumDevicesEx(
        nTLayerType: c_uint,
        pstDevList: *mut MV_CC_DEVICE_INFO_LIST,
        strManufacturerName: *const c_char,
    ) -> c_int;

    /// 枚举设备扩展（可指定排序方式枚举、根据厂商名字过滤）
    ///
    /// # 参数
    /// * `nTLayerType` - 枚举传输层（区分每一种传输层类型，不耦合）
    /// * `pstDevList` - 设备列表（输出参数）
    /// * `strManufacturerName` - 厂商名字（可传 NULL，即不过滤）
    /// * `enSortMethod` - 排序方式
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 设备列表的内存是在 SDK 内部分配的，多线程调用该接口时会进行设备列表内存的释放和申请，
    /// 建议尽量避免多线程枚举操作。
    ///
    /// strManufacturerName 可传入 NULL，若传入 NULL 则返回排好序的所有设备列表，
    /// 若不为 NULL 则只返回排好序的指定厂商设备列表。
    pub unsafe fn MV_CC_EnumDevicesEx2(
        nTLayerType: c_uint,
        pstDevList: *mut MV_CC_DEVICE_INFO_LIST,
        strManufacturerName: *const c_char,
        enSortMethod: MV_SORT_METHOD,
    ) -> c_int;

    /// 设备是否可连接
    ///
    /// # 参数
    /// * `pstDevInfo` - 设备信息结构体
    /// * `nAccessMode` - 访问权限
    ///
    /// # 返回值
    /// 可连接返回 true，不可连接返回 false
    ///
    /// # 注意事项
    /// - GIGE 相机：读取设备 CCP 寄存器的值，判断当前状态是否具有某种访问权限
    /// - 如果设备不支持 MV_ACCESS_ExclusiveWithSwitch、MV_ACCESS_ControlWithSwitch、
    ///   MV_ACCESS_ControlSwitchEnable 这三种模式，接口返回 false
    /// - MV_GIGE_DEVICE/MV_GENTL_GIGE_DEVICE 类型设备：按照 nAccessMode，返回当前是否可以被连接
    /// - 该接口支持虚拟相机、U3V 相机、cxp、xof、cameralink 采集卡相机，nAccessMode 无效
    /// - 如果相机没有被连接返回 true，如果设备被第三方连接，则返回 false
    /// - 该接口不支持 CameraLink 设备 (返回 false)
    pub unsafe fn MV_CC_IsDeviceAccessible(
        pstDevInfo: *const MV_CC_DEVICE_INFO,
        nAccessMode: c_uint,
    ) -> bool;

    /// 创建设备句柄
    ///
    /// # 参数
    /// * `handle` - 设备句柄（输出参数）
    /// * `pstDevInfo` - 设备信息结构体
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 根据输入的设备信息，创建库内部必须的资源和初始化内部模块。
    /// 通过该接口创建句柄，调用 SDK 接口，会默认生成 SDK 日志文件，
    /// 如果不需要生成日志文件，可以将日志配置文件中的日志等级改成 off。
    pub unsafe fn MV_CC_CreateHandle(
        handle: *mut *mut c_void,
        pstDevInfo: *const MV_CC_DEVICE_INFO,
    ) -> c_int;

    /// 销毁设备句柄
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 如果传入采集卡句柄，其效果和 MV_CC_DestroyInterface 相同
    pub unsafe fn MV_CC_DestroyHandle(handle: *mut c_void) -> c_int;

    /// 打开设备
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nAccessMode` - 访问权限（仅对 MV_GIGE_DEVICE/MV_GENTL_GIGE_DEVICE 类型的设备有效）
    /// * `nSwitchoverKey` - 切换访问权限时的密钥（仅对 MV_GIGE_DEVICE 类型的设备有效）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 根据设置的设备参数，找到对应的设备，连接设备。
    /// 调用接口时可不传入 nAccessMode 和 nSwitchoverKey，此时默认设备访问模式为独占权限。
    ///
    /// - MV_GIGE_DEVICE 类型设备：目前相机固件暂不支持 MV_ACCESS_ExclusiveWithSwitch、
    ///   MV_ACCESS_ControlWithSwitch、MV_ACCESS_ControlSwitchEnable、
    ///   MV_ACCESS_ControlSwitchEnableWithKey 这四种抢占模式，SDK 接口支持设置
    /// - MV_GENTL_GIGE_DEVICE 设备只支持 nAccessMode 是 MV_ACCESS_Exclusive、
    ///   MV_ACCESS_Control、MV_ACCESS_Monitor 权限
    /// - 对于 U3V 设备、CXP、Cameralink、Xof 设备、虚拟 GEV、虚拟 U3V 设备：
    ///   nAccessMode、nSwitchoverKey 这两个参数无效；默认以控制权限打开设备
    /// - 该接口支持网口设备不枚举直接打开，不支持 U 口和 GenTL 设备不枚举打开设备
    pub unsafe fn MV_CC_OpenDevice(
        handle: *mut c_void,
        nAccessMode: c_uint,
        nSwitchoverKey: c_short,
    ) -> c_int;

    /// 关闭设备
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 通过 MV_CC_OpenDevice 连接设备后，可以通过该接口断开设备连接，释放资源
    pub unsafe fn MV_CC_CloseDevice(handle: *mut c_void) -> c_int;

    /// 判断设备是否处于连接状态
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    ///
    /// # 返回值
    /// 设备处于连接状态返回 true；没连接或失去连接返回 false
    pub unsafe fn MV_CC_IsDeviceConnected(handle: *mut c_void) -> bool;

    /// 注册图像数据回调
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `cbOutput` - 回调函数指针
    /// * `pUser` - 用户自定义变量
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 通过该接口可以设置图像数据回调函数，在 MV_CC_CreateHandle 之后即可调用。
    /// 图像数据采集有两种方式，两种方式不能复用：
    ///
    /// 方式一：调用 MV_CC_RegisterImageCallBackEx 设置图像数据回调函数，
    ///       然后调用 MV_CC_StartGrabbing 开始采集，采集的图像数据在设置的回调函数中返回
    ///
    /// 方式二：调用 MV_CC_StartGrabbing 开始采集，然后在应用层循环调用
    ///       MV_CC_GetOneFrameTimeout 获取指定像素格式的帧数据，
    ///       获取帧数据时上层应用程序需要根据帧率控制好调用该接口的频率
    ///
    /// 该接口不支持 MV_CAMERALINK_DEVICE 类型的设备
    pub unsafe fn MV_CC_RegisterImageCallBackEx(
        handle: *mut c_void,
        cbOutput: MV_OutputCallback,
        pUser: *mut c_void,
    ) -> c_int;

    /// 开始取流
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口不支持 MV_CAMERALINK_DEVICE 类型的设备
    pub unsafe fn MV_CC_StartGrabbing(handle: *mut c_void) -> c_int;

    /// 停止取流
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口不支持 MV_CAMERALINK_DEVICE 类型的设备
    pub unsafe fn MV_CC_StopGrabbing(handle: *mut c_void) -> c_int;

    /// 使用内部缓存获取一帧图片（与 MV_CC_Display 不能同时使用）
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstFrame` - 图像数据和图像信息（输出参数）
    /// * `nMsec` - 等待超时时间，输入 MV_INFINITE 时表示无限等待
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 调用该接口获取图像数据帧之前需要先调用 MV_CC_StartGrabbing 启动图像采集。
    /// 该接口为主动式获取帧数据，上层应用程序需要根据帧率，控制好调用该接口的频率。
    /// 该接口支持设置超时时间，SDK 内部等待直到有数据时返回，可以增加取流平稳性，
    /// 适合用于对平稳性要求较高的场合。
    ///
    /// 该接口与 MV_CC_FreeImageBuffer 配套使用，当处理完取到的数据后，
    /// 需要用 MV_CC_FreeImageBuffer 接口将 pFrame 内的数据指针权限进行释放。
    ///
    /// 该接口与 MV_CC_GetOneFrameTimeout 相比，有着更高的效率。
    /// 且其取流缓存的分配是由 sdk 内部自动分配的，
    /// 而 MV_CC_GetOneFrameTimeout 接口是需要客户自行分配。
    ///
    /// 该接口在调用 MV_CC_Display 后无法取流。
    /// 该接口对于 U3V、GIGE 设备均可支持。
    /// 该接口不支持 CameraLink 设备。
    pub unsafe fn MV_CC_GetImageBuffer(
        handle: *mut c_void,
        pstFrame: *mut MV_FRAME_OUT,
        nMsec: c_uint,
    ) -> c_int;

    /// 释放图像缓存（此接口用于释放不再使用的图像缓存，与 MV_CC_GetImageBuffer 配套使用）
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstFrame` - 图像数据和图像数据
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口与 MV_CC_GetImageBuffer 配套使用，使用 MV_CC_GetImageBuffer 接口取到的图像数据 pFrame，
    /// 需要用 MV_CC_FreeImageBuffer 接口进行权限释放。
    ///
    /// 该接口取流效率高于 GetOneFrameTimeout 接口。
    /// 当 GetImageBuffer 不进行 FreeImageBuffer 时，最大输出图像个数为当前配置下
    /// SDK 的缓存节点个数 (用户可以调用 SetImageNode 接口，调节 SDK 的缓存个数）。
    ///
    /// 该接口对于 U3V、GIGE 设备均可支持。
    /// 该接口不支持 CameraLink 设备。
    pub unsafe fn MV_CC_FreeImageBuffer(handle: *mut c_void, pstFrame: *mut MV_FRAME_OUT) -> c_int;

    /// 采用超时机制获取一帧图片，SDK 内部等待直到有数据时返回
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pData` - 图像数据接收指针
    /// * `nDataSize` - 接收缓存大小
    /// * `pstFrameInfo` - 图像信息结构体
    /// * `nMsec` - 等待超时时间
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 调用该接口获取图像数据帧之前需要先调用 MV_CC_StartGrabbing 启动图像采集。
    /// 该接口为主动式获取帧数据，上层应用程序需要根据帧率，控制好调用该接口的频率。
    /// 该接口支持设置超时时间，SDK 内部等待直到有数据时返回，可以增加取流平稳性，
    /// 适合用于对平稳性要求较高的场合。
    ///
    /// 该接口对于 U3V、GIGE 设备均可支持。
    /// 该接口不支持 CameraLink 设备。
    pub unsafe fn MV_CC_GetOneFrameTimeout(
        handle: *mut c_void,
        pData: *mut c_uchar,
        nDataSize: c_uint,
        pstFrameInfo: *mut MV_FRAME_OUT_INFO_EX,
        nMsec: c_uint,
    ) -> c_int;

    /// 清除取流数据缓存
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口允许用户在不停止取流的时候，就能清除缓存中不需要的图像。
    /// 该接口在连续模式切触发模式后，可以清除历史数据。
    /// 该接口目前只能清除 SDK 内部的图像缓存，采集卡内的缓存还无法清除。
    pub unsafe fn MV_CC_ClearImageBuffer(handle: *mut c_void) -> c_int;

    /// 获取当前图像缓存区的有效图像个数
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pnValidImageNum` - 当前图像缓存区中有效图像个数的指针（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口只统计 SDK 内部的有效图像个数，不包括采集卡缓存内的有效图像个数
    pub unsafe fn MV_CC_GetValidImageNum(
        handle: *mut c_void,
        pnValidImageNum: *mut c_uint,
    ) -> c_int;

    /// 显示一帧图像
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `hWnd` - 窗口句柄
    /// * `pstDisplayInfo` - 图像信息
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口支持渲染宽高大小至 int 类型
    /// 渲染模式为 D3D 时，支持的最大分辨率为 16384 * 163840
    pub unsafe fn MV_CC_DisplayOneFrameEx(
        handle: *mut c_void,
        hWnd: *mut c_void,
        pstDisplayInfo: *mut crate::MV_DISPLAY_FRAME_INFO_EX,
    ) -> c_int;

    /// 显示一帧图像（扩展版本）
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `hWnd` - 窗口句柄
    /// * `pstImage` - 图像信息
    /// * `enRenderMode` - 渲染方式，Windows:0-GDI 1-D3D 2-OpenGL Linux:0-OpenGL
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 可选择 OpenGL 渲染模式，支持 PixelType_Gvsp_RGB8_Packed，PixelType_Gvsp_BGR8_Packed，PixelType_Gvsp_Mono8 三种像素格式图像大小超过 4GB 的渲染，其他渲染模式不支持。
    /// 若图像大小未超过 4GB，支持宽高大小至 int 类型
    /// 调用时需要输入 MV_CC_IMAGE 结构体中 nImageLen 的值
    /// 渲染模式为 D3D 时，支持的最大分辨率为 16384 * 163840
    pub unsafe fn MV_CC_DisplayOneFrameEx2(
        handle: *mut c_void,
        hWnd: *mut c_void,
        pstImage: *mut crate::MV_CC_IMAGE,
        enRenderMode: c_uint,
    ) -> c_int;
